--- a/site/partials/footer.html
+++ b/site/partials/footer.html
@@ -1,7 +1,16 @@
 <footer class="site-footer">
   <div class="footer-content">
     <p>© 2025 Cherished Calligraphy</p>
-    <p><a href="mailto:mirabelle@cherishedcalligraphy.com">mirabelle@cherishedcalligraphy.com</a></p>
+
+    <p>
+      <a href="mailto:mirabelle@cherishedcalligraphy.com">
+        mirabelle@cherishedcalligraphy.com
+      </a>
+    </p>
+
+    <p>
+      <a href="accessibility.html">Accessibility</a>
+    </p>
   </div>
 
   <div class="footer-icons">
@@ -34,6 +43,11 @@
       4l-8 5-8-5V6l8 5 8-5v2z"></path>
     </svg>
   </a>
+
+  <a href="accessibility.html">Accessibility</a>
+
+
+  
 
 </div>
 
